--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "jest": "^29.5.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "sort-by": "^1.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
